Here's the problem code (in tests/test_cli.py)

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ commands =
     mkdir -p {[setup]results}
     nosetests \
       --with-xunit \
+      --verbosity 2 \
       --xunit-file {[setup]results}/nose.xml \
       --with-coverage \
       --cover-erase \
